@@ -119,6 +119,7 @@ SVNSLC_SHOWINCOMPLETE|SVNSLC_SHOWEXTERNAL|SVNSLC_SHOWINEXTERNALS)
 #define SVNSLC_POPPROPERTIES			0x00020000
 #define SVNSLC_POPREPAIRMOVE			0x00040000
 #define SVNSLC_POPCHANGELISTS			0x00080000
+#define SVNSLC_POPBLAME					0x00100000
 
 #define SVNSLC_IGNORECHANGELIST			_T("ignore-on-commit")
 
